[gd_scene load_steps=10 format=3 uid="uid://cwbc4mr48xp7s"]

[ext_resource type="Script" path="res://Enemies/GroundEnemy.gd" id="1_mefon"]

[sub_resource type="Animation" id="Animation_5pcps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["!"]
}

[sub_resource type="Animation" id="Animation_6k5ul"]
resource_name = "found_player"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["!"]
}

[sub_resource type="Animation" id="Animation_iekf1"]
resource_name = "lost_player"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["?"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqtu2"]
_data = {
"RESET": SubResource("Animation_5pcps"),
"found_player": SubResource("Animation_6k5ul"),
"lost_player": SubResource("Animation_iekf1")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_h03f6"]
radius = 12.0

[sub_resource type="BoxShape3D" id="BoxShape3D_tlopx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mt8a8"]
albedo_color = Color(0.647059, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qjgky"]

[node name="GroundEnemy" type="RigidBody3D" groups=["damageables", "targeteables"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.05224, 1.18489, -6.18026)
collision_layer = 3
collision_mask = 3
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
gravity_scale = 0.0
continuous_cd = true
lock_rotation = true
script = ExtResource("1_mefon")

[node name="ReactionLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23854, 0)
visible = false
billboard = 2
text = "!"
font_size = 192
outline_size = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReactionLabel"]
libraries = {
"": SubResource("AnimationLibrary_sqtu2")
}

[node name="PlayerDetectionArea" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("SphereShape3D_h03f6")

[node name="MeshRoot" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_tlopx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshRoot"]
material_override = SubResource("StandardMaterial3D_mt8a8")
mesh = SubResource("BoxMesh_qjgky")
skeleton = NodePath("../..")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.1
